# python-for-beginners

./: app.py  automation.py  classes.py  dice.py  emoji_converter.py  person.py  pyproject.toml
notebooks/: HelloWorld.ipynb
