[tool.poetry]
name = "helloworld"
version = "0.1.0"
description = ""
authors = ["Brian Bell <bellbm@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.0.7"
pandas = "^1.3.0"
jupyter = "^1.0.0"
ipykernel = "^6.0.1"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
